develop the project

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ dmypy.json
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
+*.pdf
 
 # Installer logs
 pip-log.txt
